chore(RMDs): commit all recent changes-2

--- a/RMDs/00_seminar_framework.html
+++ b/RMDs/00_seminar_framework.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seminar Agenda</title>
+    <title>Seminar Agenda - Data Science in Wealth Management</title>
 </head>
 <body>
 
@@ -48,8 +48,8 @@
 </tr>
 <tr>
     <td style="border: 1px solid #cbd5e1; padding: 12px;">9:00-9:45</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 1: The Tax Alpha Problem</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">RMD vs Step-up tension; why data scientists should care; concrete example</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 1: The Problem</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">RMD vs Step-up tension; concrete example with Robert; why simulation is needed</td>
     <td style="border: 1px solid #cbd5e1; padding: 12px;">Glossary reference sheet</td>
 </tr>
 <tr style="background-color: #f8fafc;">
@@ -66,8 +66,8 @@
 </tr>
 <tr style="background-color: #f8fafc;">
     <td style="border: 1px solid #cbd5e1; padding: 12px;">11:00-12:00</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 3: Stochastic Modeling</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">GBM for markets; survival analysis for mortality; why averages fail</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 3: Why Simulate</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Why averages fail; sequence of returns risk; lifespan uncertainty</td>
     <td style="border: 1px solid #cbd5e1; padding: 12px;">Conceptual understanding</td>
 </tr>
 <tr>
@@ -78,9 +78,9 @@
 </tr>
 <tr style="background-color: #f8fafc;">
     <td style="border: 1px solid #cbd5e1; padding: 12px;">1:00-2:30</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 4: Monte Carlo Architecture</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">Simulation pipeline; code walkthrough; hands-on implementation</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">100 simulations running</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 4: The Math</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">GBM for stock prices; survival analysis for lifespans; code walkthrough</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Understanding of statistical models</td>
 </tr>
 <tr>
     <td style="border: 1px solid #cbd5e1; padding: 12px;">2:30-2:45</td>
@@ -90,9 +90,9 @@
 </tr>
 <tr style="background-color: #f8fafc;">
     <td style="border: 1px solid #cbd5e1; padding: 12px;">2:45-4:15</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 5: SQL Aggregation</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">Expected value, VaR, confidence intervals; Tax Alpha calculation; win rates</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">Strategy comparison queries</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 5: Building the Simulation</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Monte Carlo pipeline; storing results in DuckDB; hands-on implementation</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">10,000 simulations running</td>
 </tr>
 <tr>
     <td style="border: 1px solid #cbd5e1; padding: 12px;">4:15-4:30</td>
@@ -113,9 +113,9 @@
 </tr>
 <tr>
     <td style="border: 1px solid #cbd5e1; padding: 12px;">9:00-10:30</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 6: Scale & Sensitivity</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">Run 10K simulations; grid search over volatility; find decision boundary</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">Full simulation results</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Session 6: Analysis</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">SQL aggregation; expected value, VaR, win rates; finding the answer</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Strategy comparison queries</td>
 </tr>
 <tr style="background-color: #f8fafc;">
     <td style="border: 1px solid #cbd5e1; padding: 12px;">10:30-10:45</td>
