--- a/RMDs/01_opening_presentation.html
+++ b/RMDs/01_opening_presentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Session 1: The Tax Alpha Problem</title>
+    <title>Session 1: The Problem - Data Science in Wealth Management</title>
 </head>
 <body>
 
@@ -20,7 +20,7 @@
 </nav>
 
 <h1>Session 1: The Problem</h1>
-<p style="font-size: 18px; color: #475569;">Understanding wealth management data through a real tax optimization problem</p>
+<p style="font-size: 18px; color: #475569;">Understanding financial data through a real tax optimization problem</p>
 
 <h2 style="color: #1e40af; margin-top: 30px;">What Is Wealth Management?</h2>
 
