--- a/RMDs/03b_stats_foundations.html
+++ b/RMDs/03b_stats_foundations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Statistics Foundations: Why Averages Fail</title>
+    <title>Session 3: Why Simulate - Data Science in Wealth Management</title>
 </head>
 <body>
 
@@ -19,8 +19,8 @@
     <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
-<h1>Statistics Foundations: Why Averages Fail</h1>
-<p style="color: #64748b; font-style: italic;">Building intuition before we build code</p>
+<h1>Session 3: Why Simulate?</h1>
+<p style="color: #64748b; font-style: italic;">Understanding why averages fail for retirement planning</p>
 
 <div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">The Dangerous Statement</h2>
@@ -155,7 +155,7 @@
 
 <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 30px;">Problem 3: Lifespan is Unknown</h2>
 
-<p>We showed in the <a href="01b_problem_scenarios.html" style="color: #1e40af;">Scenarios page</a> that dying at 70 vs 90 completely changes which strategy wins. But we don't know when someone will die.</p>
+<p>Remember Robert from Session 1? Whether he dies at 70 or 90 completely changes which strategy wins. But we don't know when someone will die.</p>
 
 <p>Here's what actuarial data tells us about a 65-year-old male:</p>
 
