--- a/RMDs/05_monte_carlo_aggregation.html
+++ b/RMDs/05_monte_carlo_aggregation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why Simulation? The Case for Monte Carlo</title>
+    <title>Session 5: Simulation - Data Science in Wealth Management</title>
 </head>
 <body>
 
@@ -19,8 +19,8 @@
     <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
-<h1>Why Simulation? The Case for Monte Carlo</h1>
-<p style="color: #64748b; font-style: italic;">When calculation fails, simulation succeeds</p>
+<h1>Session 5: Building the Simulation</h1>
+<p style="color: #64748b; font-style: italic;">Putting it all together with Monte Carlo</p>
 
 <div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">The Core Idea</h2>
