--- a/RMDs/index.html
+++ b/RMDs/index.html
@@ -19,22 +19,22 @@
     <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
-<h1>Wealth Management Data Seminar</h1>
-<p style="font-size: 18px; color: #475569;">A 1.5-day intensive for data science graduate students</p>
+<h1>Data Science in Wealth Management</h1>
+<p style="font-size: 18px; color: #475569;">A 1.5-day intensive seminar</p>
 
 <h2 style="color: #1e40af; margin-top: 30px;">What This Seminar Is About</h2>
 
-<p>This seminar teaches you how to work with financial data by solving a real problem: figuring out when a retiree should take money out of their retirement accounts versus letting it grow.</p>
+<p>This seminar teaches you how to apply data science techniques to financial data. You'll solve a real problem: figuring out when a retiree should take money out of their retirement accounts versus letting it grow.</p>
 
-<p>This is not a finance course. You will not become a financial advisor. Instead, you will learn:</p>
+<p>This is a data science course using wealth management as the domain. You will learn:</p>
 
 <ul>
-    <li><strong>How to model financial data</strong> in a database (tax lots, accounts, transactions)</li>
+    <li><strong>How to model temporal financial data</strong> in a database (tax lots, accounts, transactions)</li>
     <li><strong>How to simulate uncertain futures</strong> using Monte Carlo methods</li>
-    <li><strong>How to turn simulation results into decisions</strong> using SQL aggregation</li>
+    <li><strong>How to turn simulation results into decisions</strong> using SQL aggregation and statistical analysis</li>
 </ul>
 
-<p>The wealth management problem is just the vehicle. The skills transfer to any domain where you need to model decisions under uncertainty.</p>
+<p>The wealth management domain provides a concrete context for learning these data science skills. The techniques you'll learn apply to any problem involving decisions under uncertainty.</p>
 
 <h2 style="color: #1e40af; margin-top: 30px;">The Problem We Will Solve</h2>
 
