--- a/RMDs/03_data_model_presentation.html
+++ b/RMDs/03_data_model_presentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Session 2: The Wealth Management Data Model</title>
+    <title>Session 2: Data Model - Data Science in Wealth Management</title>
 </head>
 <body>
 
@@ -19,8 +19,36 @@
     <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
-<h1>Session 2: The Wealth Management Data Model</h1>
+<h1>Session 2: Data Model</h1>
 <p style="color: #64748b; font-style: italic;">Designing schemas for temporal financial data</p>
+
+<div style="background-color: #fffbeb; border: 1px solid #fbbf24; border-radius: 8px; padding: 20px; margin: 20px 0;">
+<h2 style="color: #92400e; margin-top: 5px;">Key Terms for This Session</h2>
+<p style="margin-bottom: 10px;">These financial concepts will appear throughout this session:</p>
+<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
+<tr style="background-color: #fef3c7;">
+    <th style="border: 1px solid #fbbf24; padding: 8px; text-align: left; width: 30%;">Term</th>
+    <th style="border: 1px solid #fbbf24; padding: 8px; text-align: left; width: 70%;">What It Means</th>
+</tr>
+<tr>
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>Tax Lot</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">A record of a specific purchase (date, quantity, price)</td>
+</tr>
+<tr style="background-color: #fffbeb;">
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>Cost Basis</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">Original purchase price - used to calculate taxes</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>Unrealized Gain</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">Profit on paper (current value - cost basis)</td>
+</tr>
+<tr style="background-color: #fffbeb;">
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>Temporal Data</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">Data that changes over time (like market prices)</td>
+</tr>
+</table>
+<p style="margin-top: 10px; font-size: 14px; color: #92400e;">See the <a href="02_definitions_glossary.html" style="color: #92400e; font-weight: bold;">Glossary</a> for more detailed definitions.</p>
+</div>
 
 <div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">Session Goal</h2>
