--- a/RMDs/06_aggregation_metrics.html
+++ b/RMDs/06_aggregation_metrics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aggregation Metrics: From 10,000 Paths to Decisions</title>
+    <title>Session 6: Analysis - Data Science in Wealth Management</title>
 </head>
 <body>
 
@@ -19,8 +19,36 @@
     <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
-<h1>Aggregation Metrics: From 10,000 Paths to Decisions</h1>
-<p style="color: #64748b; font-style: italic;">The SQL queries that turn simulation output into actionable insights</p>
+<h1>Session 6: Analysis</h1>
+<p style="color: #64748b; font-style: italic;">Turning simulation results into decisions</p>
+
+<div style="background-color: #fffbeb; border: 1px solid #fbbf24; border-radius: 8px; padding: 20px; margin: 20px 0;">
+<h2 style="color: #92400e; margin-top: 5px;">Key Terms for This Session</h2>
+<p style="margin-bottom: 10px;">Statistical concepts you'll use to analyze simulation results:</p>
+<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
+<tr style="background-color: #fef3c7;">
+    <th style="border: 1px solid #fbbf24; padding: 8px; text-align: left; width: 30%;">Term</th>
+    <th style="border: 1px solid #fbbf24; padding: 8px; text-align: left; width: 70%;">What It Means</th>
+</tr>
+<tr>
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>Expected Value</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">The average outcome across all simulations</td>
+</tr>
+<tr style="background-color: #fffbeb;">
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>VaR</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">Value at Risk - worst-case at a confidence level (e.g., 5th percentile)</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>Percentile</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">The value below which X% of outcomes fall</td>
+</tr>
+<tr style="background-color: #fffbeb;">
+    <td style="border: 1px solid #fbbf24; padding: 8px;"><strong>Win Rate</strong></td>
+    <td style="border: 1px solid #fbbf24; padding: 8px;">How often Strategy A beats Strategy B</td>
+</tr>
+</table>
+<p style="margin-top: 10px; font-size: 14px; color: #92400e;">See the <a href="02_definitions_glossary.html" style="color: #92400e; font-weight: bold;">Glossary</a> for more detailed definitions.</p>
+</div>
 
 <div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">The Aggregation Problem</h2>
