--- a/RMDs/01_opening_presentation.html
+++ b/RMDs/01_opening_presentation.html
@@ -156,6 +156,112 @@
     <li><strong>What the market does.</strong> If the market crashes, his unrealized gains shrink and the step-up is worth less. If the market booms, his IRA grows larger and RMDs become more painful.</li>
 </ol>
 
+<p>Let's look at some concrete scenarios to see how dramatically the outcome changes.</p>
+
+<hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
+<h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 30px;">Scenario 1: Robert Dies Early (Age 70)</h2>
+
+<p>Robert dies at 70, before RMDs begin. The market returned 5% annually. Here's what his daughter inherits:</p>
+
+<table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
+<tr style="background-color: #1e40af; color: white;">
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: left;">Asset</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">Value at Death</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">Daughter's Tax</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">Net to Daughter</th>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Traditional IRA</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$1,276,282</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$306,308 (24%)</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$969,974</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Taxable Brokerage</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$638,141</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$0 (step-up!)</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$638,141</td>
+</tr>
+<tr style="background-color: #dbeafe;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">TOTAL</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right; font-weight: bold;">$1,914,423</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right; font-weight: bold;">$306,308</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right; font-weight: bold;">$1,608,115</td>
+</tr>
+</table>
+
+<p><strong>Key insight:</strong> The brokerage account had $438,141 in unrealized gains ($638,141 - $200,000). The step-up eliminated all of it. That's $65,721 in taxes avoided (15% of $438,141). Since Robert never faced RMDs, holding the taxable account worked beautifully.</p>
+
+<hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
+<h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 30px;">Scenario 2: Robert Lives Long (Age 90)</h2>
+
+<p>Robert lives to 90. He takes RMDs from age 73-90 (17 years). Same 5% annual return.</p>
+
+<table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
+<tr style="background-color: #1e40af; color: white;">
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: left;">Item</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">Amount</th>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Total RMDs taken (ages 73-90)</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$987,432</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Taxes paid on RMDs (24%)</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$236,984</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Remaining IRA at death</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$1,847,293</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Taxable brokerage at death</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$1,723,879</td>
+</tr>
+</table>
+
+<p><strong>Key insight:</strong> Robert paid $236,984 in RMD taxes over 17 years. The step-up still applies to the brokerage account, but now we have to weigh that benefit against the RMD tax drag. The longer you live, the more RMDs erode the IRA.</p>
+
+<hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
+<h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 30px;">Scenario 3: Bad Market Timing</h2>
+
+<p>Robert dies at 80, but the market crashed 40% in year 6 and never fully recovered. Average return over 15 years: only 2%.</p>
+
+<table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
+<tr style="background-color: #1e40af; color: white;">
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: left;">Item</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">Good Market (5%)</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">Bad Market (2%)</th>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">IRA at death</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$1,578,947</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$1,104,622</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Brokerage at death</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$1,039,464</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$672,406</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">RMD taxes paid</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$142,105</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right;">$98,432</td>
+</tr>
+<tr style="background-color: #dbeafe;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px; font-weight: bold;">Net to daughter</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right; font-weight: bold;">$2,097,259</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; text-align: right; font-weight: bold;">$1,438,923</td>
+</tr>
+</table>
+
+<p><strong>Key insight:</strong> Market returns matter enormously. The same lifespan produces a $658,336 difference in outcomes. And notice: in the bad market, the step-up benefit is smaller because there's less unrealized gain to erase.</p>
+
+<hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
 <div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h3 style="color: #1e40af; margin-top: 5px;">This Is Our Problem</h3>
 <p>We cannot calculate the answer because we do not know the inputs. We need to simulate thousands of possible futures - different lifespans, different market returns - and see which strategy wins more often, and by how much.</p>
