--- a/RMDs/06_aggregation_metrics.html
+++ b/RMDs/06_aggregation_metrics.html
@@ -16,6 +16,7 @@
     <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">4. Math</a>
     <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">5. Simulation</a>
     <a href="06_aggregation_metrics.html" style="color: #93c5fd; margin-right: 12px; text-decoration: none; font-weight: bold;">[6. Analysis]</a>
+    <a href="07_real_world_complexity.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Real World</a>
     <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
@@ -196,6 +197,11 @@ ORDER BY 1, 2;
     <li>The aggregation metrics (expected value, VaR, win rate)</li>
 </ul>
 <p><strong>Next step:</strong> Open the <a href="notebooks/01_intro_monte_carlo.ipynb" style="color: #1e40af; font-weight: bold;">Jupyter notebooks</a> and start coding!</p>
+</div>
+
+<div style="background-color: #fef3c7; border: 1px solid #f59e0b; border-radius: 8px; padding: 15px; margin: 20px 0;">
+<h3 style="color: #92400e; margin-top: 5px;">Curious About Production Systems?</h3>
+<p>This seminar simplified away many real-world complexities (wash sales, liquidity constraints, multi-account optimization, etc.). Want to see what we left out? Check out <a href="07_real_world_complexity.html" style="color: #92400e; font-weight: bold;">Real-World Complexity</a> to understand the gap between seminar and production.</p>
 </div>
 
 </body>
