--- a/RMDs/03b_stats_foundations.html
+++ b/RMDs/03b_stats_foundations.html
@@ -16,6 +16,7 @@
     <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">4. Math</a>
     <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">5. Simulation</a>
     <a href="06_aggregation_metrics.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">6. Analysis</a>
+    <a href="07_real_world_complexity.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Real World</a>
     <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
