--- a/RMDs/04_statistical_methods.html
+++ b/RMDs/04_statistical_methods.html
@@ -75,6 +75,11 @@ dS = μS dt + σS dW
 <p style="text-align: center; margin-top: 10px; color: #64748b;">This says: "Price change = expected growth + random shock"</p>
 </div>
 
+<div style="text-align: center; margin: 25px 0;">
+    <img src="src/random-walk.png" alt="Random Walk / Geometric Brownian Motion Visualization" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+    <p style="color: #64748b; font-size: 14px; margin-top: 10px;">Multiple simulated price paths using GBM - each path represents one possible future for the market.</p>
+</div>
+
 <h3 style="color: #1d4ed8; margin-top: 25px;">Breaking Down the Formula</h3>
 
 <table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
