--- a/RMDs/05_monte_carlo_aggregation.html
+++ b/RMDs/05_monte_carlo_aggregation.html
@@ -23,6 +23,10 @@
 <h1>Session 5: Building the Simulation</h1>
 <p style="color: #64748b; font-style: italic;">Putting it all together with Monte Carlo</p>
 
+<div style="text-align: center; margin: 25px 0;">
+    <img src="src/monte-carlo.png" alt="Monte Carlo Simulation Visualization" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+</div>
+
 <div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">The Core Idea</h2>
 <p style="font-size: 18px;">When a problem is too complex to solve analytically, we can <strong>simulate it thousands of times</strong> and study the distribution of outcomes.</p>
