--- a/RMDs/06_aggregation_metrics.html
+++ b/RMDs/06_aggregation_metrics.html
@@ -23,6 +23,11 @@
 <h1>Session 6: Analysis</h1>
 <p style="color: #64748b; font-style: italic;">Turning simulation results into decisions</p>
 
+<div style="text-align: center; margin: 25px 0;">
+    <img src="src/tax-distributions.png" alt="Tax Strategy Outcome Distributions" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+    <p style="color: #64748b; font-size: 14px; margin-top: 10px;">Distribution of terminal wealth outcomes for different tax strategies across 10,000 simulations.</p>
+</div>
+
 <div style="background-color: #fffbeb; border: 1px solid #fbbf24; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h2 style="color: #92400e; margin-top: 5px;">Key Terms for This Session</h2>
 <p style="margin-bottom: 10px;">Statistical concepts you'll use to analyze simulation results:</p>
