--- a/RMDs/01_opening_presentation.html
+++ b/RMDs/01_opening_presentation.html
@@ -23,6 +23,10 @@
 <h1>Session 1: The Problem</h1>
 <p style="font-size: 18px; color: #475569;">Understanding financial data through a real tax optimization problem</p>
 
+<div style="text-align: center; margin: 30px 0;">
+    <img src="src/cover-overview.png" alt="Wealth Management Data Science Overview" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+</div>
+
 <h2 style="color: #1e40af; margin-top: 30px;">What Is Wealth Management?</h2>
 
 <p>Wealth management is a service business. Clients pay advisors to help them make financial decisions: how to invest, when to sell, how to minimize taxes, how to plan for retirement, how to pass money to their kids.</p>
