--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+<body>
+
 <div style="background-color: #f8fafc; border: 1px solid #cbd5e1; border-radius: 8px; padding: 20px; margin: 20px 0;">
 <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">Instructor &amp; Course Logistics</h2>
 <p style="color: #1e293b;"><strong style="color: #1e40af;">Instructor:</strong> Prof. Gil Salu</p>
@@ -124,3 +127,7 @@
 <li><strong>Apache Kafka Documentation:</strong><br />https://kafka.apache.org/documentation/</li>
 </ul>
 <p style="color: #1e293b;">You are not expected to read all of these end-to-end. They are reference material to support labs, projects, and independent exploration.</p>
+</div>
+  
+</body>
+</html>
