Add-GitHub-Classroom-invitation-link

--- a/week02/lab.html
+++ b/week02/lab.html
@@ -32,7 +32,8 @@
     <li>Week 1 AWS account setup and IAM user creation</li>
     <li>AWS CLI installed and configured (<code style="background:#e2e8f0;padding:2px 4px;border-radius:3px;">aws configure</code>)</li>
     <li>Verified credentials work: <code style="background:#e2e8f0;padding:2px 4px;border-radius:3px;">aws sts get-caller-identity</code></li>
-    <li>Accepted GitHub Classroom assignment and cloned repository</li>
+    <li><strong>Accepted GitHub Classroom assignment:</strong> <a href="https://classroom.github.com/a/uES2n9dh" target="_blank">Accept Assignment</a></li>
+    <li>Cloned your assignment repository to your local machine</li>
   </ol>
 </div>
 
