--- a/week02/index.html
+++ b/week02/index.html
@@ -114,7 +114,7 @@
   <div style="background-color:#eff6ff;border:1px solid #60a5fa;border-radius:8px;padding:15px;margin:20px 0;">
     <h3 style="color:#1d4ed8;margin-top:5px;">Getting Started</h3>
     <ol style="color:#1e293b;">
-      <li>Accept the GitHub Classroom assignment (link in Canvas announcement)</li>
+      <li><strong>Accept the GitHub Classroom assignment:</strong> <a href="https://classroom.github.com/a/uES2n9dh" target="_blank">Click here to accept</a></li>
       <li>Clone your personal repository to your local machine</li>
       <li>Read the <a href="s3-overview.html">AWS S3 Overview</a> to understand the service</li>
       <li>Follow the <a href="lab.html">Lab Instructions</a> step-by-step</li>
